--- a/index.html
+++ b/index.html
@@ -20,6 +20,38 @@
     </head>
 <body>
    
-    
+    <header class="cabacalho">
+        <nav class="cabecalho__nav">
+            <ul class="cabecalho__nav_list">
+                <li>
+                    <h1 class="cabecalho__logo">
+                        <img src="./assets/icons/logo.svg" alt="Logo da use dev">
+                    </h1>
+                </li>
+                <li class="cabecalho__nav_list_item">
+                    <a href="#" class="cabecalho__nav_list_link">
+                        Sobre nós
+                    </a>
+                </li>
+                <li class="cabecalho__nav_list_item cabecalho__nav_list_item-imput">
+                    <input type="search" id="search" placeholder="O que você procura?" class="cabecalho__nav_list_input">
+                </li>
+                <li class="cabecalho__nav_list_item">
+                    <a href="#" class="cabecalho__nav_list_link cabecalho__nav_list_link-login">Login</a>
+                </li>
+                <li class="cabecalho__nav_list_item">
+                    <a href="#" class="cabecalho__nav_list_link cabecalho__nav_list_link-perfil">
+                        <img src="./assets/icons/perfil.svg" alt="perfil">
+                    </a>
+                </li>
+                <li class="cabecalho__nav_list_item">
+                    <a href="#" class="cabecalho__nav_list_link cabecalho__nav_list_link-carrinho">
+                        <img src="./assets/icons/carrinho.svg" alt="carrinho">
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
 </body>
 </html>
