menu navegação - CSS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </head>
 <body>
    
-    <header class="cabacalho">
+    <header class="cabecalho">
         <nav class="cabecalho__nav">
             <ul class="cabecalho__nav_list">
                 <li>
@@ -35,6 +35,7 @@
                 </li>
                 <li class="cabecalho__nav_list_item cabecalho__nav_list_item-imput">
                     <input type="search" id="search" placeholder="O que você procura?" class="cabecalho__nav_list_input">
+                    <img src="./assets/icons/search.svg" alt="Lupa" class="pesquisa-icon">
                 </li>
                 <li class="cabecalho__nav_list_item">
                     <a href="#" class="cabecalho__nav_list_link cabecalho__nav_list_link-login">Login</a>
