--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Fontes-->
     <title>UseDev</title>
+    <!-- Fontes Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
-    <!-- CSS code -->
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700; 0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- Códigos CSS para site -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="./css/cabecalho.css">
     <link rel="stylesheet" href="./css/banner.css">
@@ -17,7 +16,7 @@
     <link rel="stylesheet" href="./css/promocoes.css">
     <link rel="stylesheet" href="./css/newsletter.css">
     <link rel="stylesheet" href="./css/rodape.css">
-    </head>
+</head>
 <body>
    
     <header class="cabecalho">
@@ -25,7 +24,7 @@
             <ul class="cabecalho__nav_list">
                 <li>
                     <h1 class="cabecalho__logo">
-                        <img src="./assets/icons/logo.svg" alt="Logo da use dev">
+                        <img src="./assets/icons/logo.svg" alt="logo da use dev">
                     </h1>
                 </li>
                 <li class="cabecalho__nav_list_item">
@@ -33,9 +32,9 @@
                         Sobre nós
                     </a>
                 </li>
-                <li class="cabecalho__nav_list_item cabecalho__nav_list_item-imput">
+                <li class="cabecalho__nav_list_item cabecalho__nav_list_item-input">
                     <input type="search" id="search" placeholder="O que você procura?" class="cabecalho__nav_list_input">
-                    <img src="./assets/icons/search.svg" alt="Lupa" class="pesquisa-icon">
+                    <img src="./assets/icons/search.svg" alt="lupa" class="pesquisa-icon">
                 </li>
                 <li class="cabecalho__nav_list_item">
                     <a href="#" class="cabecalho__nav_list_link cabecalho__nav_list_link-login">Login</a>
@@ -53,6 +52,5 @@
             </ul>
         </nav>
     </header>
-
 </body>
 </html>
