--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <img src="./assets/icons/logo.svg" alt="logo da use dev">
                     </h1>
                 </li>
-                <li class="cabecalho__nav_list_item">
+                <li class="cabecalho__nav_list_item .cabecalho__nav_list_item-sobre">
                     <a href="#" class="cabecalho__nav_list_link">
                         Sobre nós
                     </a>
