--- a/index.html
+++ b/index.html
@@ -52,5 +52,13 @@
             </ul>
         </nav>
     </header>
+
+    <section class="banner">
+        <img class="banner__imagem" src="./assets/banner.png" alt="Uma pessoa vestindo uma camiseta da UseDev"/>
+        <div class="banner__container">
+            <h2 class="banner__container-titulo">Hora de abraçar <span>o seu lado geek!</span></h2>
+            <button class="banner__container-botao">Ver as novidades!</button>
+        </div>
+    </section>
 </body>
 </html>
