--- a/index.html
+++ b/index.html
@@ -91,5 +91,68 @@
             </li> 
         </ul>
     </section>
+
+    <section class="promocoes">
+        <h3 class="promocoes__titulo">Promos especiais</h3>
+        <ul class="promocoes__list">
+            <li class="promocoes__list_item">
+                <img src="./assets/produtos/abridor.png" 
+                alt="Abridor de garrafas">
+                <div class="promocoes__list_item_descricao">
+                <h4>Abridor</h4>
+                <p>29,90</p>
+            </div>
+            </li>
+            <li class="promocoes__list_item">
+                <img src="./assets/produtos/camiseta.png" alt="Camiseta">
+                <div class="promocoes__list_item_descricao">
+                <h4>Camiseta</h4>
+                <p>39,90</p>
+                </div>
+            </li>
+            <li class="promocoes__list_item">
+                <img src="./assets/produtos/caneca.png" alt="Caneca">
+                <div class="promocoes__list_item_descricao">
+                <h4>Caneca</h4>
+                <p>19,90</p>
+                </div>
+            </li>
+            <li class="promocoes__list_item">
+                <img src="./assets/produtos/camisa.png" alt="camisa">
+                <div class="promocoes__list_item_descricao">
+                <h4>Camisa</h4>
+                <p>49,90</p>
+                </div>
+            </li>
+            <li class="promocoes__list_item">
+                <img src="./assets/produtos/quadro.png" alt="Quadro">
+                <div class="promocoes__list_item_descricao">
+                <h4>Quadro</h4>
+                <p>59,90</p>
+                </div>
+            </li>
+            <li class="promocoes__list_item">
+                <img src="./assets/produtos/copo.png" alt="Copo">
+                <div class="promocoes__list_item_descricao">
+                <h4>Copo</h4>
+                <p>29,90</p>
+                </div>
+            </li>
+            <li class="promocoes__list_item">
+                <img src="./assets/produtos/boné.png" alt="Boné">
+                <div class="promocoes__list_item_descricao">
+                <h4>Boné</h4>
+                <p>39,90</p>
+                </div>
+            </li>
+            <li class="promocoes__list_item">
+                <img src="./assets/produtos/mousepad.png" alt="Mousepad">
+                <div class="promocoes__list_item_descricao">
+                <h4>Mousepad</h4>
+                <p>29,90</p>
+                </div>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
